1) Fix transition bugs of the line chart 2) Fix bugs of the box chart - X/Y axis adjustment - Overlapped boxes when event fired 3) Add transition to box chart 4) Add tooltip to box chart

--- a/Style_v2.css
+++ b/Style_v2.css
@@ -23,11 +23,12 @@ p {
 }
 /*tool tip style*/
 .d3-tip {
-    line-height: 1;
     padding: 12px;
     background: rgba(0, 0, 0, 0.8);
     color: #fff;
     border-radius: 2px;
+    font-size: 0.8em;
+    line-height: 1.2em;
 }
 
 /* Creates a small triangle extender for the tooltip */
